# bide

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  tox.ini
src/bide/: __init__.py  __main__.py  _version.py  binutils.py  cli.py
src/bide/commands/: dump_table.py
src/bide/config/: logging.yaml  settings.py
tests/: conftest.py  test-executable.c
tests/binutils/: test_get_str_from_addr.py  test_get_symbols.py  test_objdump_symbol.py  test_unexpected_subprocess_error.py
tests/cli/: conftest.py  test_dump_table_args.py  test_logging_args.py  test_no_input_params.py  test_ora_binary.py  test_unhandled_exceptions.py  test_version.py
tests/commands/dump_table/: conftest.py  test_formatted_dump.py  test_unformatted_dump.py
tests/formatter/: test_get_formatter.py  test_html_formatter.py  test_json_formatter.py  test_table_formatter.py
